<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/roverphoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <LinearLayout
        android:id="@+id/dateTakenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roverphoto"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewDateTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date_taken"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/datetaken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/RovernameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateTakenLayout"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewRoverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rover_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/RoverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="-22dp"

            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/CameranameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RovernameLayout"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewCameraName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera_name"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/CameraName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="-46dp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/StatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameranameLayout"
        android:layout_marginTop="16dp"
        android:padding="8dp">


        <TextView
            android:id="@+id/TextViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/LaunchdateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatusLayout"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewLaunchdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_date"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/launchdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LandingdateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LaunchdateLayout"
        android:layout_marginTop="16dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/textViewLandinghdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_date"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/landingdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>